--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
 
   <body>
     <div class="container">
-      <canvas id="my-canvas" width="1400" height="600">
-        <button id="upgrade-button">UPGRADE TOWER</button>
-      </canvas>
-      
-      <!-- <div class="title" id="titleScreen"> -->
-        <!-- <h1>IRON DEFENSE</h1> -->
-        <!-- <div>
-          <img src="images/initial_menu.png" alt="" />
-        </div>
-        <button id="startBtn" class="start-btn">START</button> -->
-      </div>
+      <canvas id="my-canvas" width="1400" height="600"> </canvas>
+
+      <!-- <div class="title" id="titleScreen">
+        <h1>IRON DEFENSE</h1>
+        <button id="startBtn" class="start-btn">START</button>
+      </div> -->
     </div>
 
     <script src="js/elements.js"></script>
