--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="container">
       <canvas id="my-canvas" width="1400" height="600"> </canvas>
 
-      <!-- <div class="title" id="titleScreen">
-        <h1>IRON DEFENSE</h1>
+      <div class="titleScreen" id="titleScreen">
+        <button class="gameTitle-btn">IRON DEFENSE</button>
         <button id="startBtn" class="start-btn">START</button>
-      </div> -->
+      </div>
     </div>
 
     <script src="js/elements.js"></script>
