--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <button class="gameTitle-btn">IRON DEFENSE</button>
         <button id="startBtn" class="start-btn">START</button>
       </div>
+      <!-- <button id="restartBtn" class="restart-btn" onclick="window.location.reload()">
+        Restart
+      </button> -->
     </div>
 
     <script src="js/elements.js"></script>
